fix: disable overflow-x on contentContainer

--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -5,4 +5,5 @@
 .contentContainer {
   margin: 56px;
   min-height: 125vh;
+  overflow-x: hidden;
 }
